使用 iframe 优化外部网站的显示

--- a/projects/styles.css
+++ b/projects/styles.css
@@ -53,6 +53,12 @@ code {
   color: var(--textColor);
 }
 
+.a {
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 a {
   color: blue;
 }
