--- a/other/words-notebook/styles.css
+++ b/other/words-notebook/styles.css
@@ -6,7 +6,6 @@
   --backgroundColor1-hover: black;
   --textColor-hover: white;
   --borderColor-hover: white;
-  --image: url("..\\home-light.png");
 }
 
 [data-subject="dark"] {
@@ -17,23 +16,13 @@
   --backgroundColor1-hover: white;
   --textColor-hover: black;
   --borderColor-hover: black;
-  --image: url("..\\home-dark.png");
 }
 
 body {
-  font-size: 1.5rem;
-  font-family: "Apple Chancery", "Brush Script MT", cursive;
+  font-size: 2rem;
+  font-family: KaiTi, STKaiti, FangSong, STFangSong;
   background-color: var(--backgroundColor1);
   color: var(--textColor);
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-}
-
-#image {
-  background-image: var(--image);
-  width: 90%;
-  height: auto;
 }
 
 .footer {
@@ -42,60 +31,34 @@ body {
   padding-top: 4rem;
   padding-left: 1rem;
   height: 3rem;
-  margin-top: auto;
 }
 
 .h {
   text-align: center;
 }
 
-h1.h {
-  text-align: center;
-  font-size: 3rem;
-}
-
-h3.h {
-  text-align: center;
-  font-size: 2rem;
-}
-
 a {
   color: blue;
 }
 
-.statistics {
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
+table.colorTable th {
+  background-color: #ecf0f1;
+  border: 1px solid #2c3e50;
+  color: #2c3e50;
 }
 
-.statistics th {
-  border: 2px solid #ccc;
-  border-radius: 0.2rem;
+table.colorTable td {
+  border: 1px solid #555;
+  background-color: white;
+  color: #555;
 }
 
-.statistics td {
-  border: 2px solid #ccc;
-  border-radius: 0.2rem;
-  padding-left: 1rem;
-  padding-top: 0.6rem;
+.red {
+  color: red;
 }
 
-.projects {
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
-}
-
-.projects th {
-  border: 2px solid #ccc;
-  border-radius: 0.2rem;
-}
-
-.projects td {
-  text-align: center;
-  border: 2px solid #ccc;
-  border-radius: 0.2rem;
+.blue {
+  color: blue;
 }
 
 @media (max-width: 980px) {
